--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 	 
   </tr>
 </table>	
-	
-	
+
+         <iframe src="https://www.google.com/maps/d/embed?mid=1Vn1NUOoFmBQi6Vw8FF2tCqRJCKs" width="640" height="480"></iframe>	
 	
 	</body>
 </html>  
